--- a/style.css
+++ b/style.css
@@ -157,9 +157,20 @@ nav .main-menu li .btn:hover{
 /* Header Css */
 header {
     position: relative;
-	background:url(img/desktop/image-hero.jpg) no-repeat center center;
+	background: url(img/desktop/image-hero.jpg) no-repeat center center;
     background-size: cover;
 	padding: 130px 0;
+    z-index: 1;
+}
+header::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: -1;
 }
 header .bg-pattern-left.mobile, header .bg-pattern-right.mobile {
     display: none;
